<resources>
    <string name="app_name">RoboPilot</string>
    <string name="ip_address">Server IP</string>
    <string name="port">Port</string>
    <string name="x_postiton">X Coordinate</string>
    <string name="y_postiton">Y Coordinate</string>
    <string name="location_name">Location name</string>
    <string name="save_location">Save location</string>
    <string name="send">Send</string>
    <string name="stop_motors">Stop motors</string>
    <string name="save_map">Save map</string>
    <string name="load_map">Load map</string>
    <string name="open_joypad">Open JoyPad</string>
    <string name="stop_exploration">Stop Exploration</string>
    <string name="start_exploration">Start Exploration</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_spinner_tooltip">Map name</string>
    <string name="location_spinner_tooltip">Location name</string>
</resources>
