<?xml version="1.0" encoding="utf-8"?>
<!--<android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:padding="15dp"-->
    <!--tools:context="com.lpbar.robopilot.activities.MainActivity">-->

    <android.support.v7.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        tools:context="com.lpbar.robopilot.activities.MainActivity">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ipAddressEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:ems="10"
                android:hint="@string/ip_address"
                android:inputType="textPersonName"
                android:text="0.0.0.0" />

            <EditText
                android:id="@+id/portEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:ems="10"
                android:hint="@string/port"
                android:inputType="textPersonName"
                android:text="9090" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/stopExplorationButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginRight="5dp"
                android:text="@string/stop_exploration" />
            <Button
                android:id="@+id/startExplorationButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:text="@string/start_exploration" />
        </android.support.v7.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/stopMotorsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop_motors" />
        
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/xCoordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:hint="@string/x_postiton" />

            <EditText
                android:id="@+id/yCoordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:hint="@string/y_postiton" />
        </android.support.v7.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/sendManualPoseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />

        <io.github.controlwear.virtual.joystick.android.JoystickView
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/joystick"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            custom:JV_buttonColor="#FF6E40"
            custom:JV_buttonSizeRatio="15%"
            custom:JV_borderColor="#00796B"
            custom:JV_backgroundColor="#009688"
            custom:JV_borderWidth="4dp"
            custom:JV_fixedCenter="false"/>

        <TextView
            android:id="@+id/consoleOutputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Hello" />

    </android.support.v7.widget.LinearLayoutCompat>

<!--</android.widget.ScrollView>-->